--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fragments_background"
-    tools:context=".fragments.HomeFragment">
+    tools:context=".fragments.HomeFragment"
+    tools:ignore="HardcodedText">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/home_toolbar"
@@ -147,6 +148,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="24dp"
+                    android:contentDescription="@string/user_profile_picture"
                     android:src="@drawable/ic_baseline_person_24" />
 
                 <LinearLayout
@@ -197,7 +199,7 @@
                         android:insetRight="0dp"
                         android:insetBottom="0dp"
                         android:padding="8dp"
-                        android:text="Adjust Ballance"
+                        android:text="Adjust Balance"
                         android:textSize="12sp"
                         app:cornerRadius="10dp"
                         app:icon="@drawable/ic_round_edit_24"
@@ -250,9 +252,9 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/transactionsHeaderLayout"
                         android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="16dp"
-                        android:layout_marginTop="8dp"
                         android:clickable="true"
                         app:strokeWidth="0dp">
 
