--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -50,8 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginTop="18dp"
         app:chipSpacingHorizontal="18dp"
         app:selectionRequired="true"
         app:singleSelection="true">
@@ -88,7 +87,6 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="18dp"
-        android:layout_marginBottom="18dp"
         android:hint="Transaction Title"
         app:boxCornerRadiusBottomEnd="18dp"
         app:boxCornerRadiusBottomStart="18dp"
@@ -98,12 +96,12 @@
         app:boxStrokeWidthFocused="0dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:inputType="textCapWords"
             android:id="@+id/transactionTitle"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:focusedByDefault="true"
             android:imeOptions="actionNext"
+            android:inputType="textCapWords"
             android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -114,7 +112,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/titleLayout"
-        android:layout_margin="18dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18sp"
+        android:layout_marginEnd="18dp"
         android:hint="Amount"
         app:boxCornerRadiusBottomEnd="18dp"
         app:boxCornerRadiusBottomStart="18dp"
@@ -142,7 +142,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/amountInputLayout"
-        android:layout_margin="18dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
         android:hint="Category"
         app:boxCornerRadiusBottomEnd="18dp"
         app:boxCornerRadiusBottomStart="18dp"
@@ -162,13 +164,25 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <DatePicker
+        android:id="@+id/simpleDatePicker"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_below="@id/transactionCategoryLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/saveTransactionBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/transactionCategoryLayout"
+        android:layout_below="@id/simpleDatePicker"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="36dp"
         android:text="Save Transaction" />
 
 </RelativeLayout>
