fixed npe, changed dialog colors

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fragments_background"
+    android:transitionGroup="true"
     tools:context=".fragments.HomeFragment"
     tools:ignore="HardcodedText">
 
