--- a/app/src/main/res/values-night-v31/colors.xml
+++ b/app/src/main/res/values-night-v31/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="fragments_background">@android:color/system_neutral2_900</color>
+    <color name="dialog_background_color">@android:color/system_neutral2_800</color>
     <color name="status_bar_color">@android:color/system_neutral2_900</color>
 
 
