--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="fragments_background">#ffffff</color>
+    <color name="dialog_background_color">#ffffff</color>
     <color name="status_bar_color">#f6f6f6</color>
 
     <color name="input_card_color">#e5e5e5</color>
