--- a/app/src/main/res/layout/fragment_list_transactions.xml
+++ b/app/src/main/res/layout/fragment_list_transactions.xml
@@ -48,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:layout_margin="18dp" />
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="18dp" />
 
 </RelativeLayout>
