--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,64 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="18dp">
+    android:layout_marginStart="18dp"
+    android:layout_marginTop="18dp"
+    android:layout_marginEnd="18dp"
+    android:clickable="true"
+    app:cardCornerRadius="18dp"
+    app:strokeWidth="0dp">
 
-    <ImageView
-        android:id="@+id/transactionImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/user_profile_picture"
-        android:src="@drawable/ic_baseline_person_24" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="12dp"
-        android:layout_toEndOf="@id/transactionImage"
-        android:orientation="vertical">
+        android:padding="16dp">
 
         <TextView
-            android:id="@+id/transactionPerson"
-            android:layout_width="wrap_content"
+            android:id="@+id/transactionTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Daniela" />
-
-        <TextView
-            android:id="@+id/transactionDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Fri, Aug 12, 15:48" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/moneyLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/transactionAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:textColor="#D50000"
+            android:textSize="16sp"
             android:textStyle="bold"
-            tools:text="- 90.0 lei" />
+            tools:text="Transaction Title " />
 
-        <TextView
-            android:id="@+id/transactionCategory"
+        <ImageView
+            android:id="@+id/transactionImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/transactionTitle"
+            android:layout_marginTop="18dp"
+            android:contentDescription="@string/user_profile_picture"
+            android:src="@drawable/ic_baseline_person_24" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:textSize="12sp"
-            tools:text="Transport" />
-    </LinearLayout>
+            android:layout_below="@id/transactionTitle"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="18dp"
+            android:layout_toEndOf="@id/transactionImage"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/transactionPerson"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Daniela" />
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/transactionDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                tools:text="Fri, Aug 12, 15:48" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/moneyLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/transactionTitle"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="18dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/transactionAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textColor="#D50000"
+                android:textStyle="bold"
+                tools:text="- 90.0 lei" />
+
+            <TextView
+                android:id="@+id/transactionCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:textSize="12sp"
+                tools:text="Transport" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</com.google.android.material.card.MaterialCardView>
