--- a/app/src/main/res/layout/item_wallet.xml
+++ b/app/src/main/res/layout/item_wallet.xml
@@ -1,40 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp">
+    android:clickable="true"
+    app:cardCornerRadius="18dp"
+    android:layout_margin="8dp"
+    app:cardBackgroundColor="@color/fragments_background"
+    app:strokeWidth="0dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="18dp"
-        android:layout_toStartOf="@id/walletItemPersonImage"
-        android:orientation="vertical">
+        android:padding="8dp">
 
-        <TextView
-            android:id="@+id/walletItemTitle"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Wallet Title"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="18dp"
+            android:layout_toStartOf="@id/walletItemPersonImage"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/walletItemAmount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2349 Lei"
-            android:textSize="14sp" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/walletItemTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Wallet Title"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/walletItemAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2349 Lei"
+                android:textSize="14sp" />
+        </LinearLayout>
 
 
-    <ImageView
-        android:id="@+id/walletItemPersonImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="18dp"
-        android:src="@drawable/ic_baseline_person_24" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/walletItemPersonImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="18dp"
+            android:src="@drawable/ic_baseline_person_24" />
+    </RelativeLayout>
+</com.google.android.material.card.MaterialCardView>
