layout changes, added edit wallet fragment

--- a/app/src/main/res/layout/dialog_wallet_list.xml
+++ b/app/src/main/res/layout/dialog_wallet_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/walletListDialogRootId"
     android:background="@drawable/dialog_person_info_background"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
