--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -29,7 +29,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_below="@id/transactionTitle"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="12dp"
             android:contentDescription="@string/user_profile_picture"
             android:src="@drawable/ic_baseline_person_24" />
 
@@ -39,6 +39,7 @@
             android:layout_below="@id/transactionTitle"
             android:layout_marginStart="12dp"
             android:layout_marginTop="18dp"
+            android:layout_toStartOf="@id/moneyLayout"
             android:layout_toEndOf="@id/transactionImage"
             android:gravity="center_vertical"
             android:orientation="vertical">
