--- a/app/src/main/res/layout/item_wallet.xml
+++ b/app/src/main/res/layout/item_wallet.xml
@@ -4,9 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
-    app:cardCornerRadius="18dp"
-    android:layout_margin="8dp"
     app:cardBackgroundColor="@color/fragments_background"
+    app:cardCornerRadius="18dp"
     app:strokeWidth="0dp">
 
     <RelativeLayout
@@ -19,7 +18,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="18dp"
             android:layout_toStartOf="@id/walletItemPersonImage"
             android:orientation="vertical">
 
@@ -27,6 +25,7 @@
                 android:id="@+id/walletItemTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
                 android:text="Wallet Title"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -35,8 +34,20 @@
                 android:id="@+id/walletItemAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="18dp"
                 android:text="2349 Lei"
                 android:textSize="14sp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/editWalletBtn"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="78dp"
+                android:layout_height="34dp"
+                android:layout_marginStart="14dp"
+                android:padding="0dp"
+                android:text="Edit Wallet"
+                android:textAlignment="center"
+                app:cornerRadius="10dp" />
         </LinearLayout>
 
 
@@ -45,6 +56,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="18dp"
             android:src="@drawable/ic_baseline_person_24" />
     </RelativeLayout>
