--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="simple_items">
+    <string-array name="currency_items">
         <item>RON</item>
         <item>€</item>
         <item>$</item>
@@ -8,8 +8,10 @@
     </string-array>
     <string-array name="category_items">
         <item>Groceries</item>
+        <item>Restaurant</item>
         <item>Transport</item>
         <item>Bills</item>
+        <item>Gifts</item>
         <item>Others</item>
     </string-array>
 </resources>
