added bar details fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,9 @@
         <action
             android:id="@+id/action_homeFragment_to_pieDetailsFragment"
             app:destination="@id/pieDetailsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_barDetailsFragment"
+            app:destination="@id/barDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
@@ -81,6 +84,15 @@
         android:name="com.rokudo.xpense.fragments.PieDetailsFragment"
         android:label="fragment_pie_details"
         tools:layout="@layout/fragment_pie_details" >
+        <argument
+            android:name="wallet"
+            app:argType="com.rokudo.xpense.models.Wallet" />
+    </fragment>
+    <fragment
+        android:id="@+id/barDetailsFragment"
+        android:name="com.rokudo.xpense.fragments.BarDetailsFragment"
+        android:label="fragment_bar_details"
+        tools:layout="@layout/fragment_bar_details" >
         <argument
             android:name="wallet"
             app:argType="com.rokudo.xpense.models.Wallet" />
