--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,6 +13,7 @@
         <item>Transport</item>
         <item>Bills</item>
         <item>Gifts</item>
+        <item>Medical</item>
         <item>Others</item>
     </string-array>
 </resources>
