--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -306,6 +306,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
+                android:clickable="true"
+                android:transitionName="barChartCard"
                 app:cardCornerRadius="18dp"
                 app:strokeWidth="0dp">
 
