--- a/app/src/main/res/layout/fragment_pie_details.xml
+++ b/app/src/main/res/layout/fragment_pie_details.xml
@@ -55,9 +55,9 @@
         app:strokeWidth="0dp">
 
         <RelativeLayout
-            android:layout_margin="18dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="18dp">
 
             <TextView
                 android:id="@+id/monthspendingtext"
@@ -80,13 +80,15 @@
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 
-    <TextView
-        android:id="@+id/transCategoriesText"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/categoriesRv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/pieChartCard"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="18dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="18dp"/>
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        tools:listitem="@layout/item_expense_category" />
 
 </RelativeLayout>
