added load transactions for current month

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="sharedIconTintColor">#FFFFFFFF</color>
+
     <color name="fragments_background">#202020</color>
     <color name="dialog_background_color">#202020</color>
     <color name="status_bar_color">#202020</color>
