--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="sharedIconTintColor">#FF000000</color>
+
     <color name="fragments_background">#ffffff</color>
     <color name="dialog_background_color">#ffffff</color>
     <color name="status_bar_color">#f6f6f6</color>
