--- a/app/src/main/res/layout/item_expense_category.xml
+++ b/app/src/main/res/layout/item_expense_category.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    app:cardCornerRadius="12dp"
     android:layout_marginBottom="8dp"
     android:clickable="true"
     app:strokeWidth="0dp">
@@ -23,8 +24,8 @@
 
             <ImageView
                 android:id="@+id/categoryImage"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:contentDescription="@string/user_profile_picture"
                 tools:src="@drawable/ic_round_wine_bar_24" />
 
@@ -55,7 +56,7 @@
             android:visibility="gone"
             tools:itemCount="3"
             tools:listitem="@layout/item_transaction"
-            tools:visibility="visible" />
+            tools:visibility="gone" />
 
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
