--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -164,6 +164,7 @@
                         android:layout_height="14dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="4dp"
+                        android:contentDescription="@string/user_profile_picture"
                         android:padding="0dp"
                         android:src="@drawable/ic_round_group_24"
                         app:tint="@color/sharedIconTintColor" />
@@ -299,123 +300,197 @@
             android:layout_below="@id/walletsCard"
             android:layout_marginStart="18dp"
             android:layout_marginEnd="18dp"
-            android:gravity="center"
+            android:baselineAligned="false"
             android:orientation="horizontal"
             android:weightSum="1">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/barChartCard"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:clickable="true"
-                android:transitionName="barChartCard"
-                app:cardCornerRadius="18dp"
-                app:strokeWidth="0dp">
+                android:orientation="vertical">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/monthspendingtext2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_horizontal"
+                    android:text="Last 7 days spending"
+                    android:textSize="12sp" />
 
-                    <TextView
-                        android:id="@+id/monthspendingtext2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginEnd="12dp"
-                        android:layout_marginBottom="12dp"
-                        android:gravity="center_horizontal"
-                        android:text="Last 7 days spending" />
-
-                    <com.github.mikephil.charting.charts.BarChart
-                        android:id="@+id/barChart"
-                        android:layout_width="match_parent"
-                        android:layout_height="220dp"
-                        android:layout_below="@id/monthspendingtext2"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp" />
-
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/barDetailsBtn"
-                        style="@style/Widget.Material3.Button.TextButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="34dp"
-                        android:layout_below="@id/barChart"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:insetLeft="0dp"
-                        android:insetTop="0dp"
-                        android:insetRight="0dp"
-                        android:insetBottom="0dp"
-                        android:text="Show Details"
-                        app:cornerRadius="10dp" />
-
-                </RelativeLayout>
-
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/pieChartCard"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_weight="0.5"
-                android:clickable="true"
-                android:transitionName="pieChartCard"
-                app:cardCornerRadius="18dp"
-                app:strokeWidth="0dp">
-
-                <RelativeLayout
-                    android:id="@+id/pieChartLayout"
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/barChartCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:transitionName="pieChartLayout">
+                    android:layout_marginTop="4dp"
+                    android:clickable="true"
+                    android:transitionName="barChartCard"
+                    app:cardCornerRadius="18dp"
+                    app:strokeWidth="0dp">
 
-                    <TextView
-                        android:id="@+id/monthspendingtext"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_margin="12dp"
-                        android:gravity="center_horizontal"
-                        android:text="This month's spending" />
 
-                    <com.github.mikephil.charting.charts.PieChart
-                        android:id="@+id/pieChart"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="220dp"
-                        android:layout_below="@id/monthspendingtext"
-                        android:layout_margin="8dp"
-                        android:transitionName="pieChart" />
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/pieDetailsBtn"
-                        style="@style/Widget.Material3.Button.TextButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="34dp"
-                        android:layout_below="@id/pieChart"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:insetLeft="0dp"
-                        android:insetTop="0dp"
-                        android:insetRight="0dp"
-                        android:insetBottom="0dp"
-                        android:text="Show Details"
-                        app:cornerRadius="10dp" />
+                        android:layout_height="wrap_content">
 
 
-                </RelativeLayout>
-            </com.google.android.material.card.MaterialCardView>
+                        <com.github.mikephil.charting.charts.BarChart
+                            android:id="@+id/barChart"
+                            android:layout_width="match_parent"
+                            android:layout_height="120dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginBottom="8dp" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/barDetailsBtn"
+                            style="@style/Widget.Material3.Button.TextButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="34dp"
+                            android:layout_below="@id/barChart"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:insetLeft="0dp"
+                            android:insetTop="0dp"
+                            android:insetRight="0dp"
+                            android:insetBottom="0dp"
+                            android:text="Show Details"
+                            android:visibility="gone"
+                            app:cornerRadius="10dp" />
+
+                    </RelativeLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <TextView
+                    android:id="@+id/spentMostTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="12dp"
+                    android:text="Spent most on"
+                    android:textSize="12sp" />
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/statsCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp"
+                    android:layout_marginTop="4dp"
+                    android:clickable="true"
+                    app:cardBackgroundColor="@color/homeCardColor"
+                    app:cardCornerRadius="18dp"
+                    app:strokeWidth="0dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/transactionTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Transaction Title "
+                            android:textSize="12sp"
+                            android:textStyle="normal" />
+
+                        <TextView
+                            android:id="@+id/transactionDate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Fri, Aug 12, 15:48"
+                            android:textSize="10sp"
+                            tools:ignore="SmallSp" />
+
+                        <TextView
+                            android:id="@+id/transactionAmount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="- 90.0 lei"
+                            android:textSize="12sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/transactionCategory"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Transport"
+                            android:textSize="10sp"
+                            tools:ignore="SmallSp" />
+                    </LinearLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/monthspendingtext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp"
+                    android:gravity="center_horizontal"
+                    android:text="This month's spending"
+                    android:textSize="12sp" />
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/pieChartCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="4dp"
+                    android:clickable="true"
+                    android:transitionName="pieChartCard"
+                    app:cardCornerRadius="18dp"
+                    app:strokeWidth="0dp">
+
+                    <RelativeLayout
+                        android:id="@+id/pieChartLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:transitionName="pieChartLayout">
+
+                        <com.github.mikephil.charting.charts.PieChart
+                            android:id="@+id/pieChart"
+                            android:layout_width="match_parent"
+                            android:layout_height="230dp"
+                            android:layout_margin="8dp"
+                            android:transitionName="pieChart" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/pieDetailsBtn"
+                            style="@style/Widget.Material3.Button.TextButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="34dp"
+                            android:layout_below="@id/pieChart"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:insetLeft="0dp"
+                            android:insetTop="0dp"
+                            android:insetRight="0dp"
+                            android:insetBottom="0dp"
+                            android:text="Show Details"
+                            android:textSize="12sp"
+                            app:cornerRadius="10dp" />
+
+                    </RelativeLayout>
+                </com.google.android.material.card.MaterialCardView>
+            </LinearLayout>
+
 
         </LinearLayout>
     </RelativeLayout>
