--- a/app/src/main/res/values-v31/colors.xml
+++ b/app/src/main/res/values-v31/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="message_sent_backgroundColor">@android:color/system_neutral2_50</color>
     <color name="message_received_backgroundColor">@android:color/system_neutral1_200</color>
+    <color name="homeCardColor">@android:color/system_accent1_100</color>
 </resources>
