--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <color name="message_sent_backgroundColor">#f0f0f0</color>
     <color name="message_received_backgroundColor">#40C4FF</color>
     <color name="dialog_handle_color">#C0C0C0</color>
+    <color name="homeCardColor">#B2EBF2</color>
 
 </resources>
